--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.6.5",
     "node-sass": "^5.0.0",
     "sass-loader": "^10.1.0",
+    "vant": "^3.0.2",
     "vue": "^3.0.0",
     "vue-router": "^4.0.1",
     "vuex": "^4.0.0-rc.2"
