--- a/package.json
+++ b/package.json
@@ -8,23 +8,23 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "axios": "^0.21.0",
-    "core-js": "^3.6.5",
+    "axios": "^0.21.1",
+    "core-js": "^3.15.1",
     "node-sass": "^5.0.0",
-    "sass-loader": "^10.1.0",
-    "swiper": "^6.4.15",
-    "vue": "^3.0.0",
-    "vue-router": "^4.0.1",
-    "vuex": "^4.0.0-rc.2"
+    "sass-loader": "^10.2.0",
+    "swiper": "^6.7.1",
+    "vue": "^3.1.2",
+    "vue-router": "^4.0.10",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
-    "@vue/compiler-sfc": "^3.0.0",
+    "@vue/cli-plugin-babel": "^4.5.13",
+    "@vue/cli-plugin-eslint": "^4.5.13",
+    "@vue/cli-service": "^4.5.13",
+    "@vue/compiler-sfc": "^3.1.2",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^7.0.0-0"
+    "eslint-plugin-vue": "^7.12.1"
   },
   "eslintConfig": {
     "root": true,
