--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "sass-loader": "^10.2.0",
     "swiper": "^6.7.1",
     "vue": "^3.1.2",
+    "vue-debounce": "^3.0.0",
     "vue-router": "^4.0.10",
     "vuex": "^4.0.2"
   },
